Bugfix: content not visible

--- a/app/assets/tailwind/output.css
+++ b/app/assets/tailwind/output.css
@@ -293,9 +293,6 @@
   ::-webkit-outer-spin-button {
     height: auto;
   }
-  [hidden]:where(:not([hidden="until-found"])) {
-    display: none !important;
-  }
 }
 @layer utilities {
   .diff {
